添加百度统计

--- a/index.html
+++ b/index.html
@@ -12,4 +12,5 @@
 		<p><strong>寒玉知</strong>的github.io</p>
 		<p><a href="https://icedJuice.github.io">https://icedJuice.github.io</a></p>
 	</body>
+	<script>var _hmt = _hmt || [];(function() {var hm = document.createElement("script");hm.src = "https://hm.baidu.com/hm.js?265d05e663c9ce79efee7fe7fb2c2374";var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(hm, s);})();</script>
 </html>
