--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <script>var _hmt = _hmt || [];(function() {var hm = document.createElement("script");hm.src = "https://hm.baidu.com/hm.js?265d05e663c9ce79efee7fe7fb2c2374";var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(hm, s);})();</script>
 </head>
 <body>
-    
+    <h1>寒玉知的测试页面</h1>
+    <p>仅供测试使用，不排除后期开发壮大的可能，拜拜！</p>
+    <br>
+    <br>
+    <p>个人博客：<a href="http:///blog.hanguozhi.com">http:///blog.hanguozhi.com</a></p>
 </body>
 </html>
