--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <br>
     <br>
     <p>个人博客：<a href="http:///blog.hanguozhi.com">http:///blog.hanguozhi.com</a></p>
+    <p><a href="./index/index.html">react测试页跳转</a></p>
 </body>
 </html>
