--- a/index.html
+++ b/index.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="Description" content="寒玉知的githubpage"/>
-    <meta name="Keywords" content="韩玉知"/>
-    <meta name="theme-color" content="#FFFFFF" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>寒玉知</title>
-    <script>var _hmt = _hmt || [];(function() {var hm = document.createElement("script");hm.src = "https://hm.baidu.com/hm.js?265d05e663c9ce79efee7fe7fb2c2374";var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(hm, s);})();</script>
-</head>
-<body>
-    <h1>寒玉知的测试页面</h1>
-    <p>仅供测试使用，不排除后期开发壮大的可能，拜拜！</p>
-    <br>
-    <br>
-    <p>个人博客：<a href="http:///blog.hanguozhi.com">http:///blog.hanguozhi.com</a></p>
-    <p><a href="./index/index.html">react测试页跳转</a></p>
-</body>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title></title>
+	</head>
+	<body>
+		<h1>建设中...</h1>
+		<h2>页面</h2>
+		<ul>
+			<li><a href="http://bolg.hanguozhi.com">个人博客</a></li>
+			<li><a href="https://icedJuice.github.io">gitHubPage</a></li>
+		</ul>
+		<h2>ThreeJsDemos</h2>
+		<ul>
+			<li><a href="https://icedJuice.github.io/threeJsDemo/index.html">ThreejsDemo</a></li>
+			<li><a href="https://icedJuice.github.io/threeJsDemo/point.html">Point</a></li>
+		</ul>
+	</body>
 </html>
