--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<h1>建设中...</h1>
 		<h2>页面</h2>
 		<ul>
-			<li><a href="http://bolg.hanguozhi.com">个人博客</a></li>
+			<li><a href="http://blog.hanguozhi.com">个人博客</a></li>
 			<li><a href="https://icedJuice.github.io">gitHubPage</a></li>
 		</ul>
 		<h2>ThreeJsDemos</h2>
