--- a/404.html
+++ b/404.html
@@ -12,16 +12,34 @@ permalink: /404.html
     <title>Document</title>
 </head>
 <style>
+    body{
+        text-align: center;
+        color: #333333;
+    }
+    h1{
+        padding-top: 30px;
+    }
+    h3{
+        margin-top: 50px;
+    }
+    h4{
+        padding-bottom: 10px;
+        margin-bottom: 30px;
+        border-bottom: 1px solid #ddd;
+    }
+    p{
+        color: #666666;
+    }
 </style>
 <body>
     <br>
     <h1>Wo～ 啥都没有</h1>
+    <h4>（错误代码： 404）</h4>
     <div>
         <h3>互联网交通委提醒您</h3>
-        <p>地址千万条</p>
-        <p>安全第一条</p>
-        <p>访问不规范</p>
-        <p>情人两行泪</p>
+
+        <p>地址千万条, 安全第一条</p>
+        <p>访问不规范, 情人两行泪</p>
     </div>
 </body>
 </html>
