--- a/plug-in/loading/loading.html
+++ b/plug-in/loading/loading.html
@@ -45,7 +45,7 @@
 	</style>
 	<body>
 	   
-<script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+<script src="https://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
 <script src="Loading.jq.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript">
    $(document).ready(function (){    
